# habit-tracker

./: LICENSE  README.md  setup.cfg
.github/workflows/: tests.yml
habits/: __init__.py  __main__.py  application.py  console_definition.py  runtime_config.py
habits/analyze/: daily.py  utils.py  weekly.py
habits/command/: analyze.py  command.py  help.py  manage.py  track.py
habits/database/: database.py  habit.py  habit_repository.py  repository.py  tracking.py  tracking_repository.py
setup/: setup.sql
sqlite/: .gitignore
tests/: test_analyzing_utils.py  test_database.py  test_repository.py
