[metadata]
name = habit-tracker
version = attr: habits.__version__
description = The habit tracker is a small Python based command line application which helps you how well you are sticking with your daily or weekly habits.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
author = Thomas Payer
author_email = me@tpa.codes
url = https://github.com/ohtyap/habit-tracker/
license = MIT License
classifiers =
  Development Status :: 5 - Production/Stable
  Intended Audience :: End Users/Desktop
  License :: OSI Approved :: MIT License
  Natural Language :: English
  Programming Language :: Python :: 3

[options]
packages = find:
include_package_data = True
python_requires = >= 3.7

[options.package_data]
* = *.sql

[options.entry_points]
console_scripts = habit-tracker=habits.__main__:main
